--- a/package.json
+++ b/package.json
@@ -9,6 +9,16 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@emotion/cache": "11.14.0",
+        "@emotion/react": "11.14.0",
+        "@emotion/styled": "11.14.0",
+        "@mui/lab": "6.0.0-beta.23",
+        "@mui/material": "6.4.0",
+        "@mui/material-nextjs": "6.3.1",
+        "@mui/x-data-grid": "7.24.0",
+        "@mui/x-date-pickers": "7.24.0",
+        "@mui/x-tree-view": "7.24.0",
+        "minimal-shared": "1.0.5",
         "next": "15.0.3",
         "react": "18.3.1",
         "react-dom": "18.3.1"
