--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "minimal-shared": "1.0.5",
         "next": "15.0.3",
         "react": "18.3.1",
-        "react-dom": "18.3.1"
+        "react-dom": "18.3.1",
+        "zustand": "5.0.3"
     },
     "devDependencies": {
         "@types/node": "22.9.3",
